Fixed title, author, username, and password field from being too long

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -387,7 +387,7 @@ p.comsec {
 a.dcomment {
 	float: right;
 	font-style: normal;
-	margin-left: 30px;
+	padding-left: 30px;
 }
 
 p.numcom {
